// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Old Snapshot tests - remove when refactoring passes additional classes 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle test-class"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r3:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring renders successfully 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r1:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows badge 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:rh:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__count"
    >
      <span
        class="pf-v6-c-badge pf-m-unread"
      >
        badge
      </span>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows icon 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:rf:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M30.168 12.894a.5.5 0 0 0-.488-.394h-2.732a11.512 11.512 0 0 0-.729-1.769l1.931-1.93a.5.5 0 0 0 .066-.625 14.693 14.693 0 0 0-4.393-4.392.498.498 0 0 0-.624.067l-1.93 1.93a11.512 11.512 0 0 0-1.769-.729V2.319a.5.5 0 0 0-.395-.489 14.81 14.81 0 0 0-6.211 0 .5.5 0 0 0-.395.489v2.733c-.614.196-1.207.439-1.769.729L8.8 3.851a.498.498 0 0 0-.624-.067 14.714 14.714 0 0 0-4.393 4.392.5.5 0 0 0 .066.625l1.931 1.93a11.512 11.512 0 0 0-.729 1.769H2.319a.5.5 0 0 0-.488.394 14.652 14.652 0 0 0 0 6.212.5.5 0 0 0 .488.394h2.732c.196.615.44 1.207.729 1.769l-1.931 1.93a.5.5 0 0 0-.066.625 14.673 14.673 0 0 0 4.393 4.392.498.498 0 0 0 .624-.067l1.93-1.93c.562.289 1.154.533 1.769.729v2.733a.5.5 0 0 0 .395.489 14.686 14.686 0 0 0 6.21 0 .5.5 0 0 0 .395-.489v-2.733a11.454 11.454 0 0 0 1.769-.729l1.93 1.93a.5.5 0 0 0 .624.067 14.714 14.714 0 0 0 4.393-4.392.5.5 0 0 0-.066-.625l-1.931-1.93c.289-.562.533-1.154.729-1.769h2.732a.5.5 0 0 0 .488-.394 14.652 14.652 0 0 0 0-6.212ZM16 21.25c-2.895 0-5.25-2.355-5.25-5.25s2.355-5.25 5.25-5.25 5.25 2.355 5.25 5.25-2.355 5.25-5.25 5.25Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows isDisabled 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle pf-m-disabled"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r7:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    disabled=""
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows isExpanded 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r5:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows isPlain 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle pf-m-plain"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plain-:rb:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
          />
        </svg>
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows isPrimary 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle pf-m-primary"
    data-ouia-component-id="OUIA-Generated-MenuToggle-primary-:r9:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Old Snapshot tests - remove when refactoring shows plain text 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:rd:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Toggle
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;
